# xap

./: ChangeLog  INSTALL  Makefile.in  NEWS  README  TODO.txt  aclocal.m4  configure  configure.in  index.html  setup.inf  setup.tcl  xat.glade  xfi.glade
docs/: Makefile  Makefile.in  Mlvwmrc-Xap  index.in  mkFvwmXapMenu  xap.1  xap.css  xap.desktop  xap.kdelnk  xap.rc  xap.spec  xfi.rc  xpg.1  xpg.rc  xwf.1  xwf.desktop  xwf.kdelnk  xwf.rc
icons/: Makefile  error.xpm  i_block_dev.xpm  i_char_dev.xpm  i_char_dev_owner.xpm  i_dir_close.xpm  i_dir_close_lnk.xpm  i_dir_close_lnk_owner.xpm  i_dir_close_owner.xpm  i_dir_close_write.xpm  i_dir_open.xpm  i_dir_open_lnk.xpm  i_dir_open_lnk_owner.xpm  i_dir_open_owner.xpm  i_dir_open_write.xpm  i_dir_pd.xpm  i_dir_up.xpm  i_dir_up_owner.xpm  i_exe.xpm  i_exe_lnk.xpm  i_exe_lnk_owner.xpm  i_exe_owner.xpm  i_exe_sgid.xpm  i_exe_sgid_owner.xpm  i_exe_sugd.xpm  i_exe_suid.xpm  i_exe_suid_owner.xpm  i_fifo.xpm  i_page.xpm  i_page_lnk.xpm  i_page_owner.xpm  i_page_write.xpm  i_socket.xpm  i_stale_lnk.xpm  info.xpm  mini-AbiWord.xpm  mini-BasiliskII.xpm  mini-LinNeighborhood.xpm  mini-animate.xpm  mini-apm.xpm  (+95 more)
lib-src/: adouble.c  adouble.h  config.h  config.h.in  entry.c  entry.h  gtk_dlg.c  gtk_dlg.h  gtk_dnd.c  gtk_dnd.h  gtk_exec.c  gtk_exec.h  gtk_util.c  gtk_util.h  i18n.h  io.c  io.h  lnk.c  lnk.h  lnk_opt.c  lnk_opt.h  mailcap.c  mailcap.h  reg.c  reg.h  uri.c  uri.h  xap_fs.c  xap_fs.h
po/: Makefile.in.in  POTFILES  POTFILES.in  cat-id-tbl.c
xap-src/: xap.c  xap_gui.c  xap_gui.h
xat-src/: callbacks.c  callbacks.h  gui.c  gui.h  main.c
xcp-src/: xcp.c  xcp_gui.c  xcp_gui.h
xfi-src/: callbacks.c  callbacks.h  gui.c  gui.h  main.c  support.c
xpg-src/: xpg.c  xpg_gui.c  xpg_gui.h  xpg_opt.c  xpg_opt.h
xwf-src/: gtk_get.c  gtk_get.h  history.c  history.h  top.c  top.h  xwf.c  xwf_cfg.h  xwf_dnd.c  xwf_dnd.h  xwf_gui.c  xwf_gui.h  xwf_icon.c  xwf_icon.h  xwf_misc.c  xwf_misc.h
